--- a/style.css
+++ b/style.css
@@ -170,3 +170,12 @@ a:hover, a:active, a:focus {
 .footer p {
   margin: .3em;
 }
+
+hr {
+  height: 1px;
+  border-top: 1px;
+  border-right: none;
+  border-left: none;
+  border-color: #aaa;
+  width: 40%;
+}
