--- a/style/style.css
+++ b/style/style.css
@@ -43,8 +43,9 @@ body {
   -webkit-border-bottom-right-radius: 30px;
   -moz-border-radius-bottomright: 30px;
   border-radius: 0px 0px 30px 0px;
-  -moz-box-shadow: -2px 2px 6px rgba(0,0,0,0.6);
-  -webkit-box-shadow: -2px 2px 6px rgba(0,0,0,0.6);
+  box-shadow: -2px 2px 6px #888;
+  -moz-box-shadow: -2px 2px 6px #888;
+  -webkit-box-shadow: -2px 2px 6px #888;
 }
 
 #content {
@@ -129,8 +130,9 @@ a:hover, a:active, a:focus {
 	-webkit-border-top-left-radius: 30px;
 	-moz-border-radius-topleft: 30px;
     border-top-left-radius: 30px;
-	-moz-box-shadow: -2px 0px 6px rgba(0,0,0,0.6);
-	-webkit-box-shadow: -2px 0px 6px rgba(0,0,0,0.6);
+	box-shadow: -2px 0px 6px #888;
+	-moz-box-shadow: -2px 0px 6px #888;
+	-webkit-box-shadow: -2px 0px 6px #888;
 }
 
 #headerlogo{
@@ -182,8 +184,9 @@ a:hover, a:active, a:focus {
 	background-color: #f2f2f2;
 	border-bottom: 1px solid #ccc; 
 	border-top: 1px solid #ccc;
-	-moz-box-shadow: -1px 2px 3px rgba(0,0,0,0.3);
-	-webkit-box-shadow: -1px 2px 3px rgba(0,0,0,0.3);
+	box-shadow: -1px 2px 3px #bbb;
+	-moz-box-shadow: -1px 2px 3px #bbb;
+	-webkit-box-shadow: -1px 2px 3px #bbb;
 }
 
 #nav li {
