--- a/style/style.css
+++ b/style/style.css
@@ -96,14 +96,13 @@ body {
   position: relative;
 }
 
-#headerlogo a {
-  display: block;
-}
 
 #headertext {
+  cursor: hand;
+  cursor: pointer;
   position: absolute;
   top: 50%;
-  margin: -30% 0 0 0;
+  margin-top: -30%;
   padding: 20px 50px 20px 50px;
   float: left;
   background-color: #2C93BA;
