made width of text limited

--- a/www/assets/style/application.css
+++ b/www/assets/style/application.css
@@ -57,8 +57,12 @@ body {
 }
 
 #content {
-  background: #fcfcfc;
   padding: 50px;
+  width: 800px;
+}
+
+#contentContainer {
+  background: #fcfcfc;
 }
 
 #footer {
